#328 fix icon misalignment

--- a/volontulo/frontend/scss/customization/_customization.scss
+++ b/volontulo/frontend/scss/customization/_customization.scss
@@ -135,6 +135,9 @@ label {
             text-align: center;
             .glyphicon {
                 top: 2px;
+                margin: 0;
+                font-size: inherit;
+                vertical-align: baseline;
             }
         }
         .media-body {
@@ -166,7 +169,9 @@ label {
                 opacity: .92;
                 line-height: .5;
                 .glyphicon {
+                    margin: 0;
                     font-size: 24px;
+                    vertical-align: baseline;
                 }
             }
             .media-body {
@@ -177,6 +182,8 @@ label {
         }
     }
 }
+
+// user profile
 .user-heading {
     .cover-image {
         min-height: 100%;
